plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
}

group = 'edu.washu.tag'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

def temporalVersion = "1.27.0"
def s3Version = "2.20.0"
def checkstyleVersion = "10.18.1"

configurations {
	checkstyleConf
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.opentelemetry:opentelemetry-api'
	implementation 'io.opentelemetry:opentelemetry-opentracing-shim'
	implementation 'io.micrometer:micrometer-registry-otlp'
    implementation "io.temporal:temporal-sdk:${temporalVersion}"
    implementation "io.temporal:temporal-spring-boot-starter:${temporalVersion}"
	implementation "software.amazon.awssdk:s3:${s3Version}"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	checkstyleConf("com.puppycrawl.tools:checkstyle:${checkstyleVersion}") {
		transitive = false
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

checkstyle {
	toolVersion checkstyleVersion
	config = resources.text.fromArchiveEntry(configurations.checkstyleConf, 'google_checks.xml')
}
